# cargo-nix-plugin

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  flake.nix
.github/workflows/: ci.yaml
builder/: Cargo.toml
builder/src/: main.rs
builder/src/build_rust_crate/: build.rs  config.rs  configure.rs  install.rs  mod.rs  rustc.rs  util.rs
cpp/: CMakeLists.txt  plugin.cc
lib/: default.nix
nix/: build-rust-crate-bin.nix  cargo-nix-prefetch.nix  eval-test.nix  plugin.nix
nix/build-rust-crate/: default.nix
rust/: Cargo.toml
rust/src/: cargo_config.rs  cfg_eval.rs  feature_resolve.rs  ffi.rs  lib.rs  lockfile.rs  registry.rs  resolve.rs
rust/src/lockfile_resolve/: manifest.rs  mod.rs
rust/tests/fixtures/feature-dev-shadows-optional/: Cargo.toml
rust/tests/fixtures/feature-dev-shadows-optional/leaf/: Cargo.toml
rust/tests/fixtures/root-packages-workspace/a/: Cargo.toml
rust/tests/fixtures/root-packages-workspace/b/: Cargo.toml
rust/tests/fixtures/root-packages-workspace/c/: Cargo.toml
rust/tests/fixtures/sample-path-dep/: Cargo.toml
rust/tests/fixtures/sample-path-dep/devdep/: Cargo.toml
rust/tests/fixtures/sample-path-dep/devdep/src/: lib.rs
rust/tests/fixtures/sample-path-dep/inner/: Cargo.toml
rust/tests/fixtures/sample-path-dep/inner/src/: lib.rs
rust/tests/fixtures/sample-project-features/: Cargo.toml
rust/tests/fixtures/sample-project-features/gated-dep-marker/: Cargo.toml
rust/tests/fixtures/sample-project-registry/: Cargo.toml
rust/tests/fixtures/sample-project-registry/.cargo/: config.toml
signatures/: cla.json
tests/: cargo-compat-test.nix  chroot-store-test.nix  eval-test.nix  fake-sparse-ca.crt  fake-sparse-server.py  fake-sparse-tls.crt  fake-sparse-tls.key  git-source-test.nix  mirror-test.nix  offline-build-test.nix  remote-sparse-test.nix  retry-test.nix  sample-build-test.nix  torture-test.nix
tests/bench-fixtures/: Cargo.nix
tests/fake-git-repo/: Cargo.toml
tests/fake-git-repo/crates/bar/src/: lib.rs
tests/fake-git-repo/crates/foo/: Cargo.toml
tests/fake-git-repo/crates/foo/src/: lib.rs
tests/fake-sparse-index/: config.json
tests/fake-sparse-index/3/f/: fnv
tests/fake-sparse-index/by/te/: bytes
tests/fake-sparse-index/ht/tp/: http
tests/fake-sparse-index/me/mc/: memchr
tests/fake-sparse-index/ne/w_/: new_debug_unreachable
tests/fake-sparse-index/se/rd/: serde_json
tests/git-consumer/: Cargo.toml
tests/git-consumer/src/: main.rs
tests/sample-project/: Cargo.toml  metadata.json
tests/sample-project-nodeps/: Cargo.toml
tests/sample-project-nodeps/lib/: Cargo.toml  build.rs
tests/sample-project-nodeps/lib/src/: lib.rs
tests/sample-project-nodeps/lib/tests/: integration.rs
tests/sample-project-nodeps/mixed/: Cargo.toml
tests/sample-project-nodeps/mixed/src/: main.rs
tests/sample-project/sample-bin/: Cargo.toml
tests/sample-project/sample-bin/src/: main.rs
tests/sample-project/sample-lib/: Cargo.toml
tests/sample-project/sample-lib/src/: lib.rs
