[package]
name = "build-rust-crate"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/anthropics/cargo-nix-plugin"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "1.0", default-features = false, features = ["parse", "serde"] }
jobserver = "0.1"
