[package]
name = "cargo-nix-plugin-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/anthropics/cargo-nix-plugin"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cargo_metadata = "0.23"
cargo-platform = "0.3"
toml = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
base64 = "0.22"
tame-index = { version = "0.26", default-features = false }
# Already pulled by tame-index; direct dep for VersionReq in lockfile disambiguation.
semver = "1"
# ureq for remote sparse index fetching — sync, no tokio/hyper.
# webpki-roots bundles Mozilla certs so we don't depend on the system store.
ureq = { version = "3", default-features = false, features = ["rustls", "gzip"] }
http = "1"
netrc = "0.4"
# Jitter for retry backoff. Already a transitive dep via ureq/tame-index;
# direct entry pins it explicitly.
getrandom = "0.3"
# RFC 7231 / 9110 HTTP-date parsing for Retry-After. ~5KB, no deps.
httpdate = "1"
# Atomic NamedTempFile-then-persist for cross-process-safe index cache writes.
tempfile = "3"
walkdir = "2"

[dev-dependencies]
