[package]
name = "sample-lib"
version = "0.1.0"
edition = "2021"

# Explicit [[bin]] (vs src/bin/ autodiscovery) so the lib-only dep test also
# catches the builder re-reading [[bin]] from Cargo.toml after eval passed
# crateBin = [] to suppress it.
[[bin]]
name = "sample-tool"
path = "src/bin/sample-tool.rs"

[features]
# Only enabled via clippyAllFeatures; probed by offline-build-test.
all-features-probe = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Renamed dep: exercises crateRenames / --extern alias=path codepath.
# The crate is imported as `my_http` but resolves package `http`.
my_http = { package = "http", version = "1" }
# Regression: fnv has `[lib] path = "lib.rs"` (no src/). The sparse index
# has no [lib] table, so lockfile-resolve emits libPath = null and the
# native builder must recover it from the unpacked Cargo.toml or the rlib
# is silently never built ("extern location for fnv does not exist").
fnv = "1"
# Regression: package `new_debug_unreachable` ships `[lib] name =
# "debug_unreachable"`. Exercises the lib-name marker + --extern key
# rewrite in the consumer.
new_debug_unreachable = "1"
